# IOTD_drf_project

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
IOTD/: asgi.py  settings.py  urls.py  wsgi.py
IOTD/tests/: test_articles.py  test_example.py  test_users.py
articles/: admin.py  models.py  serializers.py  urls.py  views.py
articles/migrations/: 0002_article_nickname.py  0002_hashtag_remove_article_tags_article_tags.py  0003_remove_article_nickname_alter_article_tags.py
tests/: conftest.py  factories.py  test_models.py  test_views.py
users/: admin.py  models.py  serializers.py  tokens.py  urls.py  views.py
users/migrations/: 0002_alter_user_fashion.py  0002_alter_user_is_active_alter_user_nickname.py
